[gd_scene load_steps=5 format=3 uid="uid://d2ybe1ilfjvob"]

[ext_resource type="Script" path="res://source/utility/interactionBox.gd" id="1_dnw0c"]
[ext_resource type="PackedScene" uid="uid://bc4rtderuq6fa" path="res://source/utility/buttonHint.tscn" id="4_iveme"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tcgjk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bgyg"]
size = Vector2(32, 32)

[node name="InteractionBox" type="Area2D"]
script = ExtResource("1_dnw0c")

[node name="Panel" type="Panel" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_tcgjk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 100
shape = SubResource("RectangleShape2D_1bgyg")

[node name="ButtonHint" parent="." instance=ExtResource("4_iveme")]
position = Vector2(0, -24)

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
